mousemove effect on h1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero">
         <div class="about_container">
             <p>Hello, my name is</p>
-            <h1>Shubham.</h1>
+            <h1 data-value="SHUBHAM.">SHUBHAM.</h1>
             <p>I build things for Web.</p>
             <a href="#"><button class="cv_btn">Download CV</button></a>
         </div>
