--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Hello, my name is</p>
             <h1 data-value="SHUBHAM.">SHUBHAM.</h1>
             <p>I build things for Web.</p>
-            <a href="#"><button class="cv_btn">Download CV</button></a>
+            <!-- <a href="#"><button class="cv_btn">Download CV</button></a> -->
         </div>
     </div>
     <div class="about_me" id="about-me">
@@ -67,7 +67,8 @@
                     <p>My personal portfolio website.</p>
                     <p>Technologies used :</p>
                     <p>html, css, javascript</p>
-                    <button class="pro_btn">Link</button>
+                    <a href="https://itohara22.github.io/personal-portfolio/" target="_blank"><button
+                            class="pro_btn">Link</button></a>
                 </div>
             </div>
         </div>
@@ -97,7 +98,7 @@
         <footer>
             <a href="https://www.linkedin.com/in/shubham-ghogle-25743a258/" target="_blank"><img
                     src="/images/logo-linkedin.png" alt=""></a>
-            <a href="" target="_blank"><img src="/images/logo-git.png" alt=""></a>
+            <a href="https://github.com/itohara22" target="_blank"><img src="/images/logo-git.png" alt=""></a>
         </footer>
     </div>
 </body>
