added project 1 link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>A react webapp which summarize online article using AI api.</p>
                     <p>Technologies used :</p>
                     <p>React, Redux, RapidAPI</p>
-                    <a href=""><button class="pro_btn">Link</button></a>
+                    <a href="https://imaginative-fairy-f7b760.netlify.app/" target="_blank"><button class="pro_btn">Link</button></a>
                 </div>
             </div>
             <div class="project">
