added contact images

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </div>
         <footer>
             <a href="https://www.linkedin.com/in/shubham-ghogle-25743a258/" target="_blank"><img
-                    src="/images/logo-linkedin.png" alt=""></a>
-            <a href="https://github.com/itohara22" target="_blank"><img src="/images/logo-git.png" alt=""></a>
+                    src="./images/logo-linkedin.png" alt=""></a>
+            <a href="https://github.com/itohara22" target="_blank"><img src="./images/logo-git.png" alt=""></a>
         </footer>
     </div>
 </body>
