add download CV button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Hello, my name is</p>
             <h1 data-value="SHUBHAM.">SHUBHAM.</h1>
             <p>I build things for Web.</p>
-            <!-- <a href="#"><button class="cv_btn">Download CV</button></a> -->
+            <a href="../assets/CV.pdf" download="CV"><button class="cv_btn">Download CV</button></a>
         </div>
     </div>
     <div class="about_me" id="about-me">
